# src/swagger-output.json
@@ -342,6 +342,25 @@
       }
     },
     "/api/category/{id}": {
+      "get": {
+        "tags": [
+          "Categories"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      },
       "patch": {
         "tags": [
           "Categories"
